test/sema/typeck/tuple/field-assignment-wrong-type.out
error: cannot assign `Bool` to field `0` of `(Int64, Bool)` with type `Int64`.
--> field-assignment-wrong-type.dora:2:5
 | fn f(mut x: (Int, Bool), v: Bool) {
 |     x.0 = v;
       ~~~~~~~
 | }
 | 
1 error found.
